# cuma-webcrawler

./: .gitignore  README.md  argv.py  configData.py  crawler.py  custom.py  pyproject.toml  run.py  source.py  toElasticsearch.py  toJson.py
config/: __init__.py  search.json  setArgv.py  setSearch.py  setSource.py
