[tool.poetry]
name = "webcrawler"
version = "0.1.0"
description = ""
authors = ["jean9710 <jean9710@proten.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
playwright = "^1.49.1"
elasticsearch = "7.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
